Remove some unnecessary code and fix the gap between elements in the header.

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -13,7 +13,6 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
-  align-items: center;
   justify-content: space-between;
   padding: 8px;
 }
@@ -50,17 +49,13 @@ a {
 ul {
   list-style-type: none;
   display: flex;
-  flex-direction: row;
   gap:16px
 }
 
-.left_position {
-  display: flex;
-  align-items: center;
-}
-
-.right_position {
+.left_position, .right_position {
   display: flex;
   align-items: center;
   gap: 16px;
 }
+
+
